logs/validate.20260323-193440.log
error[E0282]: type annotations needed
    --> src/Chap43/OrderedTableStEph.rs:2592:36
     |
2592 |                     right_tree@ == Set::empty(),
     |                                    ^^^^^^^^^^ cannot infer type of the type parameter `A` declared on the struct `Set`
     |
help: consider specifying the generic argument
     |
2592 |                     right_tree@ == Set::<A>::empty(),
     |                                       +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
Elapsed: 17s
